Move the Spotify players to the new UI look and read Windows media controls in Java (#138)
The pause menu and HUD Spotify players use the new UI look: rounded cover, accent progress bar, round playback buttons, song and cover fades, a compact card that fits below the pause menu, and long titles that scroll, with a Scroll Long Titles toggle per player. Play/pause responds instantly. On Windows, Spotify is read and controlled through the WinRT media session API from Java instead of a bundled PowerShell script.

Closes #129